test/libsolidity/syntaxTests/literalSuffixes/usableAsSuffix/invalid_magic_variable_as_suffix.sol
contract C {
    uint a = 1000 msg;
}
// ----
// TypeError 5704: (26-34): This expression cannot be used as a literal suffix.
